<resources>
    <string name="app_name">Time Clock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    Main activity
    <string name="clocked_in">You are clocked in</string>
    <string name="clocked_out">You are clocked out</string>
    <string name="preference_last_clock_in_time">last_clock_in_time</string>

    Sign in
    <string name="email_and_password_sign_in">Email and password sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="fill_blanks">Please fill the blanks</string>
    <string name="new_user">Are you new to Time Clock?</string>
    <string name="create_an_account">Create account</string>
    <string name="error">An unknown error occurred</string>

    Create new account
    <string name="name_label">Name</string>

</resources>
